<resources>
    <string name="app_name">BeritaApp</string>
    <string-array name="title">
        <item>Melihat Lebih Dekat KTT G20 di Bali</item>
        <item>Banjir Rendam Tol Bitung</item>
        <item>Ragam Analisis di Balik Absennya Putin di KTT G20 Bali</item>
        <item>Penemuan Jenazah Perempuan 29 Tahun di Tugu Selatan, Sudah Kaku dan Membengkak</item>
        <item>Jokowi dan Megawati Bahas Sosok Capres 2024</item>
        <item>Solusi Atasi Krisis Dunia Hanya Satu, Setop Invasi Rusia</item>
        <item>4 Hal yang Harus Diperhatikan Saat Kucing Melahirkan</item>
        <item>AISI Klaim Pameran IMOS 2022 Raup Transaksi Lebih dari Rp 100 Miliar</item>
        <item>Jalur Sepeda Sering Diserobot Pengendara Sepeda Motor, Pesepeda Jadi Waswas</item>
        <item>Biznet Bakal Bangun Jaringan Fiber Optik di Pulau Sumatera pada 2023</item>

    </string-array>
    <string-array name="author">
        <item>Selasa,15 Nov</item>
        <item>Selasa,15 Nov</item>
        <item>Senin,14 Nov</item>
        <item>Senin,14 Nov</item>
        <item>Selasa,15 Nov</item>
        <item>Selasa,15 Nov</item>
        <item>Senin,14 Nov</item>
        <item>Senin,14 Nov</item>
        <item>Senin,14 Nov</item>
        <item>Senin,14 Nov</item>
    </string-array>
    <string name="year">Tahun</string>
    <string-array name="detail">
        <item> Jakarta - Wartawan Istana Kepresidenan yang lain sempat berkunjung ke area The Apurva Kempinski pada Senin (15/11/2022) kemarin. Kedatangan para wartawan Istana untuk meliput rangkaian agenda pertemuan bilateral Presiden Joko Widodo (Jokowi) dengan sejumlah pemimpin G20</item>
        <item> Blitung -Genangan di Tol Bitung terjadi imbas meluapnya air Sungai Sabi dan Sungai Cisadane ke badan jalan tol. Banjir terpantau terjadi sejak Minggu (15/11) pukul 20.50 WIB. Jika dihitung hingga pagi ini per pukul 06.00 WIB, kurang lebih banjir menggenangi area ini selama 33 jam.</item>
        <item>Jakarta - Presiden Rusia Vladimir Putin absen menghadiri KTT G20 yang berlangsung di Bali, Indonesia. Kehadiran Putin diwakilkan oleh Menteri Luar Negeri (Menlu) Rusia Sergei Lavrov.Mengapa Putin tidak bisa menghadiri langsung KTT G20 Bali</item>
        <item>Jakarta - Pria di Indramayu, Jawa Barat inisial T (47) membacok adik iparnya S (45) hingga tewas. Pelaku diduga sakit hati karena korban ikut campur urusan rumah tangga pelaku dan istrinya.</item>
        <item>Jakarta - Ketua DPP Partai Demokrasi Indonesia Perjuangan (PDIP), Said Abdullah, hakulyakin bahwa Presiden Joko Widodo alias Jokowi bakal senada dengan Ketua </item>
        <item>Nusa Dua - Presiden Ukraina Volodymyr Zelensky mengatakan, solusi untuk mengatasi krisis pangan, energi, dan ancaman keamanan seperti nuklir adalah menghentikan agresi Rusia ke negaranya."Saya ingin perang Rusia agresif ini berakhir dengan adil dan berdasarkan pada Piagam PBB serta hukum internasional, dan bukan dengan cara apa pun," kata Zelensky yang bergabung secara virtual dalam konferensi tingkat tinggi atau KTT G20 Bali, Selasa, 15 November 2022.</item>
        <item>Jakarta - Berbeda dengan manusia, masa kehamilan kucing berlangsung selama 60 hari. Jelang melahirkan, biasanya akan menunjukkan tanda-tanda. Apa saja yang perlu disiapkan ketika kucing kesayangan segera melahirkan ?</item>
        <item>Jakarta - Jalur sepeda di Jakarta masih sering diserobot oleh pengguna sepeda motor dan mobil. Kondisi itu terlihat berdasarkan pantauan Tempo, Sabtu pagi kemarin, 14 November 2022</item>
        <item>Jakarta -Senior Manager Marketing Consumer Biznet Adrianto Sulistyo mengungkap beberapa proyek terbaru dari perusahaan tahun 2023. Salah satunya adalah pembangunan fiber optik di Pulau Sumatera, dari Bandar Lampung sampai Banda Aceh.</item>
        <item>Jakarta - Pemain sayap timnas Brasil Raphinha punya misi khusus di Piala Dunia 2022 Qatar. Mengingat negaranya memenangkan turnamen pada edisi 202, ia  mengatakan bahwa Piala Dunia adalah momen yang baik untuk membangkitkan kembali rasa kebersamaan di masyarakat Brasil.Raphinha, yang melakukan debutnya di Brasil pada Oktober 2021, akan tampil di Piala Dunia pertamanya di Qatar. </item>
    </string-array>
    <string name="rahmat_sugiarto">Ayudha Kusuma Rahmadhani</string>
    <string name="email_about">yudhadeux@gmail.com</string>
</resources>